--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
 <div id="notes" style="width: 50%;"></div>
 
   <script>
-    const API_URL = "http://127.0.0.1:8000/api/notes";
+    const API_URL = "/api/notes";
 
     async function fetchNotes() {
       const res = await fetch(API_URL);
