added more functionalities

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Notes App</title>
   <style>
@@ -11,7 +11,6 @@
       margin: 0;
       padding: 2rem;
     }
-
     .container {
       max-width: 700px;
       margin: auto;
@@ -20,18 +19,15 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
     h1 {
       text-align: center;
       color: #333;
     }
-
     .form-group {
       display: flex;
       flex-direction: column;
       margin-bottom: 1rem;
     }
-
     .form-group input,
     .form-group textarea {
       padding: 10px;
@@ -40,7 +36,6 @@
       border-radius: 4px;
       margin-top: 5px;
     }
-
     button {
       padding: 10px 15px;
       font-size: 1rem;
@@ -51,15 +46,12 @@
       cursor: pointer;
       margin-top: 10px;
     }
-
     button:hover {
       background: #0056b3;
     }
-
     .notes-list {
       margin-top: 2rem;
     }
-
     .note {
       background: #fafafa;
       border-left: 4px solid #007bff;
@@ -68,11 +60,9 @@
       border-radius: 4px;
       position: relative;
     }
-
     .hidden {
       display: none;
     }
-
     @media (max-width: 600px) {
       .container {
         padding: 1rem;
@@ -83,8 +73,6 @@
 <body>
   <div class="container">
     <h1>📝 My Notes</h1>
-
-    <!-- Login Form -->
     <div id="login-section">
       <div class="form-group">
         <label for="login-username">Username</label>
@@ -97,8 +85,6 @@
       <button onclick="login()">Login</button>
       <button onclick="showRegister()" style="background:#28a745;margin-left:10px;">Register</button>
     </div>
-
-    <!-- Register Form -->
     <div id="register-section" class="hidden">
       <div class="form-group">
         <label for="register-username">Username</label>
@@ -115,8 +101,6 @@
       <button onclick="register()">Register</button>
       <button onclick="showLogin()" style="background:#6c757d;margin-left:10px;">Back to Login</button>
     </div>
-
-    <!-- Notes Section -->
     <div id="notes-section" class="hidden">
       <div class="form-group">
         <label for="title">Title</label>
@@ -131,7 +115,6 @@
       <div class="notes-list" id="notes"></div>
     </div>
   </div>
-
   <script>
     const API_BASE = "/api/notes";
     let userId = localStorage.getItem("user_id");
@@ -141,26 +124,20 @@
       document.getElementById("register-section").classList.remove("hidden");
       document.getElementById("notes-section").classList.add("hidden");
     }
-
     function showLogin() {
       document.getElementById("login-section").classList.remove("hidden");
       document.getElementById("register-section").classList.add("hidden");
       document.getElementById("notes-section").classList.add("hidden");
     }
-
     function showNotes() {
       document.getElementById("login-section").classList.add("hidden");
       document.getElementById("notes-section").classList.remove("hidden");
       fetchNotes();
     }
-
     async function login() {
       const username = document.getElementById("login-username").value.trim();
       const password = document.getElementById("login-password").value.trim();
-      if (!username || !password) {
-        alert("Please enter both username and password.");
-        return;
-      }
+      if (!username || !password) return alert("Please enter both username and password.");
       const res = await fetch(`${API_BASE}/login`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
@@ -171,58 +148,40 @@
         localStorage.setItem("user_id", data.user_id);
         userId = data.user_id;
         showNotes();
-      } else {
-        alert("Login failed. Please check your credentials.");
-      }
+      } else alert("Login failed. Please check your credentials.");
     }
-
     function logout() {
       localStorage.removeItem("user_id");
       userId = null;
       showLogin();
     }
-
     async function fetchNotes() {
-      if (!userId) return;
       const res = await fetch(`${API_BASE}/users/${userId}/notes`);
-      if (res.ok) {
-        const notes = await res.json();
-        const notesDiv = document.getElementById("notes");
-        notesDiv.innerHTML = "";
-
-        notes.forEach(note => {
-          const noteEl = document.createElement("div");
-          noteEl.className = "note";
-
-          noteEl.innerHTML = `
-            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
-              <div>
-                <strong>${note.title}</strong>
-                <p>${note.content}</p>
-              </div>
-              <div style="display: flex; flex-direction: column; gap: 5px;">
-                <button onclick="editNote(${note.id}, '${note.title.replace(/'/g, "\\'").replace(/"/g, "&quot;")}', '${note.content.replace(/'/g, "\\'").replace(/"/g, "&quot;")}')" style="background:#ffc107;">Edit</button>
-                <button onclick="deleteNote(${note.id})" style="background:#dc3545;">Delete</button>
-              </div>
-            </div>
-            <div style="margin-top: 1rem;">
-              <p style="color:${note.status === 'done' ? 'green' : 'gray'};"><em>Status: ${note.status}</em></p>
-              ${note.status !== 'done' ? `<button onclick="markAsDone(${note.id})" style="background:#17a2b8;">Mark as Done</button>` : ''}
-            </div>
-          `;
-
-          notesDiv.appendChild(noteEl);
-        });
-      }
+      if (!res.ok) return;
+      const notes = await res.json();
+      const notesDiv = document.getElementById("notes");
+      notesDiv.innerHTML = "";
+      notes.forEach(note => {
+        const noteEl = document.createElement("div");
+        noteEl.className = "note";
+        noteEl.innerHTML = `
+          <strong>${note.title}</strong><br/>
+          <p>${note.content}</p>
+          <small>
+            Created at: ${new Date(note.created_at).toLocaleString()}<br/>
+            Last Updated at: ${new Date(note.updated_at).toLocaleString()}
+          </small><br/>
+          <button onclick="deleteNote(${note.id})">Delete</button>
+          <button onclick="editNote(${note.id}, \`${note.title}\`, \`${note.content}\`)">Edit</button>
+          <button onclick="markDone(${note.id})">Mark as Done</button>
+        `;
+        notesDiv.appendChild(noteEl);
+      });
     }
-
     async function addNote() {
       const title = document.getElementById("title").value.trim();
       const content = document.getElementById("content").value.trim();
-      if (!title || !content) {
-        alert("Please fill in both title and content.");
-        return;
-      }
+      if (!title || !content) return alert("Please fill in both title and content.");
       const res = await fetch(`${API_BASE}/users/${userId}/notes`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
@@ -232,16 +191,12 @@
         document.getElementById("title").value = "";
         document.getElementById("content").value = "";
         fetchNotes();
-      } else {
-        alert("Failed to add note.");
-      }
+      } else alert("Failed to add note.");
     }
-
     async function deleteNote(id) {
       await fetch(`${API_BASE}/users/${userId}/notes/${id}`, { method: "DELETE" });
       fetchNotes();
     }
-
     function editNote(id, title, content) {
       document.getElementById("title").value = title;
       document.getElementById("content").value = content;
@@ -250,10 +205,7 @@
       addBtn.onclick = async function() {
         const newTitle = document.getElementById("title").value.trim();
         const newContent = document.getElementById("content").value.trim();
-        if (!newTitle || !newContent) {
-          alert("Please fill in both title and content.");
-          return;
-        }
+        if (!newTitle || !newContent) return alert("Please fill in both title and content.");
         const res = await fetch(`${API_BASE}/users/${userId}/notes/${id}`, {
           method: "PUT",
           headers: { "Content-Type": "application/json" },
@@ -265,26 +217,14 @@
           addBtn.textContent = "Add Note";
           addBtn.onclick = addNote;
           fetchNotes();
-        } else {
-          alert("Failed to update note.");
-        }
+        } else alert("Failed to update note.");
       };
     }
-
     async function register() {
       const username = document.getElementById("register-username").value.trim();
       const email = document.getElementById("register-email").value.trim();
       const password = document.getElementById("register-password").value.trim();
-      if (!username || !email || !password) {
-        alert("Please fill in all fields.");
-        return;
-      }
-      const passwordPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
-      if (!passwordPattern.test(password)) {
-        alert("Password must be at least 8 characters long and include uppercase, lowercase, number, and special character.");
-        return;
-      }
-
+      if (!username || !email || !password) return alert("Please fill in all fields.");
       const res = await fetch(`${API_BASE}/register`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
@@ -298,47 +238,28 @@
         alert(data.detail || "Registration failed.");
       }
     }
-
     async function markAsDone(id) {
       const res = await fetch(`${API_BASE}/users/${userId}/notes/${id}`, {
         method: "PUT",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ status: "done" })
       });
-
-      if (res.ok) {
-        fetchNotes();
-      } else {
-        alert("Failed to update status.");
-      }
+      if (res.ok) fetchNotes();
+      else alert("Failed to update status.");
     }
-
     window.onload = function () {
-  const firstVisit = localStorage.getItem("first_visit");
-
-  if (!firstVisit) {
-    // First time visiting — force login
-    localStorage.setItem("first_visit", "true"); // mark future visits
-    localStorage.removeItem("user_id");          // log out any session
-    userId = null;
-    showLogin();
-  } else {
-    // Not first visit — check if logged in
-    userId = localStorage.getItem("user_id");
-    if (userId) {
-      showNotes();  // auto-login
-    } else {
-      showLogin();  // not logged in
-    }
-  }
-};
-    // Ensure the user is logged out on page load if first visit
-    if (!localStorage.getItem("first_visit")) {
-      localStorage.removeItem("user_id");
-      userId = null;
-      showLogin();
-    }
-
+      const firstVisit = localStorage.getItem("first_visit");
+      if (!firstVisit) {
+        localStorage.setItem("first_visit", "true");
+        localStorage.removeItem("user_id");
+        userId = null;
+        showLogin();
+      } else {
+        userId = localStorage.getItem("user_id");
+        if (userId) showNotes();
+        else showLogin();
+      }
+    };
   </script>
 </body>
 </html>
