--- a/static/index.html
+++ b/static/index.html
@@ -60,6 +60,47 @@
       border-radius: 4px;
       position: relative;
     }
+
+    .note.done {
+      background: #f0f0f0;
+      opacity: 0.8;
+    }
+    .note strong {
+      display: block;
+      font-size: 1.2rem;
+      color: #333;
+    }
+    .note p {
+      margin: 0.5rem 0;
+      color: #555;
+    }
+    .note small {
+      display: block;
+      color: #999;
+      margin-bottom: 0.5rem;
+    }
+
+
+    .note button {
+      margin-right: 5px;
+      background: #6c757d;
+    }
+    .note button:hover {
+      background: #5a6268;
+    }
+    .note button:last-child {
+      background: #28a745;
+    }
+    .note button:last-child:hover {
+      background: #218838;
+    }
+    .note button.delete {
+      background: #dc3545;
+    }
+    .note button.delete:hover {
+      background: #c82333;
+    }
+    
     .hidden {
       display: none;
     }
@@ -156,29 +197,52 @@
       showLogin();
     }
     async function fetchNotes() {
-      const res = await fetch(`${API_BASE}/users/${userId}/notes`);
-      if (!res.ok) return;
-      const notes = await res.json();
-      const notesDiv = document.getElementById("notes");
-      notesDiv.innerHTML = "";
-      notes.sort((a, b) => new Date(b.created_at) - new Date(a.created_at));
-      notes.forEach(note => {
-        const noteEl = document.createElement("div");
-        noteEl.className = "note";
-        noteEl.innerHTML = `
-          <strong>${note.title}</strong><br/>
-          <p>${note.content}</p>
-          <small>
-            Created at: ${new Date(note.created_at).toLocaleString()}<br/>
-            Last Updated at: ${new Date(note.updated_at).toLocaleString()}
-          </small><br/>
-          <button onclick="deleteNote(${note.id})">Delete</button>
-          <button onclick="editNote(${note.id}, \`${note.title}\`, \`${note.content}\`)">Edit</button>
-          ${note.status === 'active' ? `<button onclick="markAsDone(${note.id})">Mark as Done</button>` : '<em>✔ Done</em>'}
-        `;
-        notesDiv.appendChild(noteEl);
-      });
-    }
+  const res = await fetch(`${API_BASE}/users/${userId}/notes`);
+  if (!res.ok) return;
+
+  const notes = await res.json();
+  const notesDiv = document.getElementById("notes");
+  notesDiv.innerHTML = "";
+
+  // Sort latest first
+  notes.sort((a, b) => new Date(b.created_at) - new Date(a.created_at));
+
+  const activeNotes = notes.filter(note => note.status !== "done");
+  const doneNotes = notes.filter(note => note.status === "done");
+
+  const createNoteElement = (note) => {
+    const noteEl = document.createElement("div");
+    noteEl.className = note.status === "done" ? "note done" : "note";
+    noteEl.innerHTML = `
+      <strong>${note.title}</strong><br/>
+      <p>${note.content}</p>
+      <small>
+        Created at: ${new Date(note.created_at).toLocaleString()}<br/>
+        Last Updated at: ${new Date(note.updated_at).toLocaleString()}
+      </small><br/>
+      <button onclick="deleteNote(${note.id})">Delete</button>
+      <button onclick="editNote(${note.id}, \`${note.title}\`, \`${note.content}\`)">Edit</button>
+      ${
+        note.status !== "done"
+          ? `<button onclick="markAsDone(${note.id})">Mark as Done</button>`
+          : `<span style="color:green;font-weight:bold;">✔ Done</span>`
+      }
+    `;
+    return noteEl;
+  };
+
+  activeNotes.forEach(note => notesDiv.appendChild(createNoteElement(note)));
+
+  if (doneNotes.length > 0) {
+    const archiveHeader = document.createElement("h3");
+    archiveHeader.textContent = "Archived";
+    archiveHeader.style.marginTop = "2rem";
+    notesDiv.appendChild(archiveHeader);
+
+    doneNotes.forEach(note => notesDiv.appendChild(createNoteElement(note)));
+  }
+}
+
     async function addNote() {
       const title = document.getElementById("title").value.trim();
       const content = document.getElementById("content").value.trim();
